# depaudit

./: README.md  pyproject.toml
.github/workflows/: ci.yml
depaudit/: __init__.py  audit.py  cli.py  licenses.py  resolver.py  vulnerabilities.py
tests/: test_depaudit.py
