[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "depaudit"
version = "0.1.0"
description = "Audit Python dependencies for license compliance and known CVEs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["dependencies", "license", "compliance", "cve", "security", "audit", "osv"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[project.scripts]
depaudit = "depaudit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["depaudit*"]
